Update Create 2d grid with NumPy.ipynb

--- a/Create 2d grid with NumPy.ipynb
+++ b/Create 2d grid with NumPy.ipynb
@@ -15,19 +15,12 @@
     }
    ],
    "source": [
-    "import itertools, time, os, gc, shutil, uuid, shutil, pickle, lzma, struct\n",
-    "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "import pyproj\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn.neighbors import KDTree, BallTree\n",
-    "\n",
     "import geopandas as gpd\n",
     "import shapely \n",
-    "import pygeos\n",
-    "import rasterio\n",
-    "import pyproj"
+    "import pygeos"
    ]
   },
   {
@@ -35,8 +28,8 @@
    "metadata": {},
    "source": [
     "##### Create a 2d regular grid with NumPy as an array of 4 dimenions: xmin, ymin, xmax, ymax.\n",
-    "- The xmin, xmax, ymin, ymax parameters define the bounds of the grid.\n",
-    "- The parameters xstep and ystep define the number of rectangles in the x-axis and y-axis respectively.\n",
+    "- The xmin, xmax, ymin, ymax input parameters define the bounds of the grid.\n",
+    "- The input parameters xstep and ystep define the number of rectangles in the x-axis and y-axis respectively.\n",
     "- The index of the grid is also returned.\n",
     "- Every operation is vectorized and implemented in NumPy so it should be very efficient."
    ]
@@ -48,6 +41,10 @@
    "outputs": [],
    "source": [
     "def create_grid(xmin, xmax, ymin, ymax, xstep, ystep):\n",
+    "    \"\"\"\n",
+    "    Create bounding coordinates for a regular 2d grid with numpy.\n",
+    "    These coordinates can then be used with shapely, pygeos and geopandas.\n",
+    "    \"\"\"\n",
     "    \n",
     "    # Generate two evenly spaced ranges\n",
     "    x = np.linspace(xmin, xmax, int(xstep+1))\n",
@@ -72,7 +69,7 @@
     "    # Generate index\n",
     "    grid_index = np.arange(1, xstep * ystep + 1)\n",
     "    \n",
-    "    # Output grid in format: xmin, ymin, xmax, ymax\n",
+    "    # Output coordinates: xmin, ymin, xmax, ymax\n",
     "    return grid, grid_index\n"
    ]
   },
