Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -11,7 +11,8 @@
     "- The dataset is in [Raster format](https://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm) (geotiff), divided into 1000x1000km tiles, 25m resolution, accuracy of +/- 7m RMSE.\n",
     "- The only dependencies of this script are Numpy, Pandas, Pyproj and Rasterio.\n",
     "- The process was designed to minimize memory consuption. This means that pieces, tiles or chunks of the rasters are read sequentially from storage.\n",
-    "- A distributed version of this script can be easily created with Dask for Big Data use cases."
+    "- A distributed version of this script can be easily created with Dask for Big Data use cases.\n",
+    "- Notebook source on [Github](https://github.com/carlosg-m/goose/blob/accdd26d4e96d5b54ab6dfcaed2f85fb09a88f21/Copernicus%20-%20retrieve%20elevation%20for%20any%20point%20in%20Europe%20(Pandas%20version).ipynb)."
    ]
   },
   {
@@ -594,7 +595,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -629,9 +629,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 4029.46 MiB, increment: 3486.94 MiB\n",
-      "CPU times: user 1min 21s, sys: 11.5 s, total: 1min 32s\n",
-      "Wall time: 1min 32s\n"
+      "peak memory: 4024.54 MiB, increment: 3482.17 MiB\n",
+      "CPU times: user 1min 21s, sys: 11.6 s, total: 1min 33s\n",
+      "Wall time: 1min 33s\n"
      ]
     }
    ],
@@ -815,9 +815,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 1479.80 MiB, increment: 23.35 MiB\n",
-      "CPU times: user 784 ms, sys: 109 ms, total: 892 ms\n",
-      "Wall time: 1.01 s\n"
+      "peak memory: 1480.99 MiB, increment: 23.24 MiB\n",
+      "CPU times: user 852 ms, sys: 67.9 ms, total: 920 ms\n",
+      "Wall time: 1.04 s\n"
      ]
     }
    ],
