Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -12,7 +12,7 @@
     "- The only dependencies of this script are Numpy, Pandas, Pyproj and Rasterio.\n",
     "- The process was designed to minimize memory consuption. This means that pieces, tiles or chunks of the rasters are read sequentially from storage.\n",
     "- A distributed version of this script can be easily created with Dask for Big Data use cases.\n",
-    "- Notebook source on [Github](https://github.com/carlosg-m/goose/blob/accdd26d4e96d5b54ab6dfcaed2f85fb09a88f21/Copernicus%20-%20retrieve%20elevation%20for%20any%20point%20in%20Europe%20(Pandas%20version).ipynb)."
+    "- Notebook source on [Github](https://github.com/carlosg-m/goose/blob/9027ea9aff817e1296de087880911773bb1a214e/Copernicus%20-%20retrieve%20elevation%20for%20any%20point%20in%20Europe%20\\(Pandas%20version\\).ipynb)."
    ]
   },
   {
