Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -8,11 +8,10 @@
     "- The dataset is the [European Digital Elevation Model (EU-DEM), version 1.1](https://land.copernicus.eu/imagery-in-situ/eu-dem/eu-dem-v1.1).\n",
     "- The source is the European Union's Copernicus Programme. More info [here](https://ec.europa.eu/eurostat/documents/7116161/7172326/Report-EU-DEM-statistical-validation-August2014.pdf).\n",
     "- It's accurate, trustworthy, free and can be dowloaded from the link above.\n",
-    "- The dataset is in [Raster format](https://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm) (geotiff), divided into 1000x1000km tiles, 25m resolution, accuracy of +/- 7m RMSE.\n",
+    "- The dataset is in [Raster format](https://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm) (geotiff), divided into 1000x1000km tiles, 25m resolution, accuracy of ~7m RMSE.\n",
     "- The only dependencies of this script are Numpy, Pandas, Pyproj and Rasterio.\n",
     "- The process was designed to minimize memory consuption. This means that pieces, tiles or chunks of the rasters are read sequentially from storage.\n",
-    "- A distributed version of this script can be easily created with Dask for Big Data use cases.\n",
-    "- Notebook source on [Github](https://github.com/carlosg-m/goose/blob/9027ea9aff817e1296de087880911773bb1a214e/Copernicus%20-%20retrieve%20elevation%20for%20any%20point%20in%20Europe%20\\(Pandas%20version\\).ipynb)."
+    "- A distributed version of this script can be easily created with Dask for Big Data use cases."
    ]
   },
   {
