Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -436,8 +436,8 @@
     "    def get_elevation(self, df, lat_col, lon_col, input_crs='epsg:4326'):\n",
     "        \"\"\"\n",
     "        User interface. Allows to retrieve elevation for a dataframe that contains WGS84 coordinates.\n",
-    "        The elevation column is appended to the final dataframe.\n",
-    "        All original columns that are inputed are also returned (e.g. keys).\n",
+    "        The elevation column is appended to the input dataframe.\n",
+    "        All original columns of the dataframe are also returned (e.g. keys).\n",
     "        Null input values values are supported and kept. \n",
     "        Elevation values for points that are out-of-bounds are treated as null.\n",
     "        The raster uses a mask, a large negative value, around water bodies and the ocean.\n",
@@ -616,7 +616,12 @@
    "metadata": {},
    "source": [
     "##### Retrieve elevation values for test dataframe\n",
-    "- Monitor execution time and memory consumption."
+    "- The elevation column is appended to the input dataframe.\n",
+    "- All original columns of the dataframe are also returned (e.g. keys).\n",
+    "- Null input values values are supported and kept. \n",
+    "- Elevation values for points that are out-of-bounds are treated as null.\n",
+    "- The raster uses a mask, a large negative value, around water bodies and the ocean.\n",
+    "- Execution time and memory consumption dislplayed below."
    ]
   },
   {
@@ -628,8 +633,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 4024.54 MiB, increment: 3482.17 MiB\n",
-      "CPU times: user 1min 21s, sys: 11.6 s, total: 1min 33s\n",
+      "peak memory: 3963.04 MiB, increment: 3420.59 MiB\n",
+      "CPU times: user 1min 21s, sys: 11.7 s, total: 1min 33s\n",
       "Wall time: 1min 33s\n"
      ]
     }
@@ -814,9 +819,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 1480.99 MiB, increment: 23.24 MiB\n",
-      "CPU times: user 852 ms, sys: 67.9 ms, total: 920 ms\n",
-      "Wall time: 1.04 s\n"
+      "peak memory: 1481.29 MiB, increment: 24.14 MiB\n",
+      "CPU times: user 778 ms, sys: 99.6 ms, total: 877 ms\n",
+      "Wall time: 999 ms\n"
      ]
     }
    ],
