Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Function to create regular grid, and function to intersect points with regular grid.\n",
+    "##### Function to create regular grid, and function to intersect points with regular grid\n",
     "- Efficient and simple, built in Numpy.\n",
     "- Compatible with Rasterio windows.\n",
     "- No need for spatial index or brute force queries.\n",
@@ -633,9 +633,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 3963.04 MiB, increment: 3420.59 MiB\n",
-      "CPU times: user 1min 21s, sys: 11.7 s, total: 1min 33s\n",
-      "Wall time: 1min 33s\n"
+      "peak memory: 3998.09 MiB, increment: 3455.45 MiB\n",
+      "CPU times: user 1min 22s, sys: 11.6 s, total: 1min 34s\n",
+      "Wall time: 1min 34s\n"
      ]
     }
    ],
@@ -819,9 +819,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 1481.29 MiB, increment: 24.14 MiB\n",
-      "CPU times: user 778 ms, sys: 99.6 ms, total: 877 ms\n",
-      "Wall time: 999 ms\n"
+      "peak memory: 1490.55 MiB, increment: 22.97 MiB\n",
+      "CPU times: user 828 ms, sys: 76 ms, total: 904 ms\n",
+      "Wall time: 1.02 s\n"
      ]
     }
    ],
