Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -6,9 +6,8 @@
    "source": [
     "## Retrieve elevation for any point in Europe\n",
     "- The dataset is the [European Digital Elevation Model (EU-DEM), version 1.1](https://land.copernicus.eu/imagery-in-situ/eu-dem/eu-dem-v1.1).\n",
-    "- The source is the European Union's Copernicus Programme. More info [here](https://ec.europa.eu/eurostat/documents/7116161/7172326/Report-EU-DEM-statistical-validation-August2014.pdf).\n",
-    "- It's accurate, trustworthy, free and can be dowloaded from the link above.\n",
-    "- The dataset is in [Raster format](https://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm) (geotiff), divided into 1000x1000km tiles, 25m resolution, accuracy of ~7m RMSE.\n",
+    "- The source is the European Union's Copernicus Programme. More info [here](https://land.copernicus.eu/imagery-in-situ/eu-dem/eu-dem-v1.1?tab=metadata).\n",
+    "- The dataset is in [Raster format](https://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm) (geotiff), divided into 1000x1000km tiles, 25m resolution, accuracy of [(~7m RMSE)](https://ec.europa.eu/eurostat/documents/7116161/7172326/Report-EU-DEM-statistical-validation-August2014.pdf).\n",
     "- The only dependencies of this script are Numpy, Pandas, Pyproj and Rasterio.\n",
     "- The process was designed to minimize memory consumption. This means that pieces, tiles or chunks of the rasters are read sequentially from storage.\n",
     "- A distributed version of this script can be easily created with Dask for Big Data use cases."
@@ -38,8 +37,7 @@
     "- Compatible with Rasterio windows.\n",
     "- No need for spatial index or brute force queries.\n",
     "- Shapely, Pygeos or handling geometries is also not required.\n",
-    "- [Grid creation tutorial](https://github.com/carlosg-m/goose/blob/4696f621dfbc711fc68d4e30e579d8e79825a0d0/Create%202d%20grid%20with%20NumPy.ipynb)\n",
-    "- [Grid intersection tutorial](https://github.com/carlosg-m/goose/blob/983433b1af425dbb5846e8a7614f220579ea1ecf/Intersect%20points%20with%20a%20regular%20grid%20without%20a%20spatial%20index.ipynb)"
+    "- More information: [Grid creation and intersection notebooks.](https://github.com/carlosg-m/goose)"
    ]
   },
   {
