Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -619,7 +619,7 @@
     "- Null input values values are supported and kept. \n",
     "- Elevation values for points that are out-of-bounds are treated as null.\n",
     "- The raster uses a mask, a large negative value, around water bodies and the ocean.\n",
-    "- Execution time and memory consumption dislplayed below."
+    "- Execution time and memory consumption displayed below."
    ]
   },
   {
