Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -10,7 +10,8 @@
     "- The dataset is in [Raster format](https://desktop.arcgis.com/en/arcmap/10.3/manage-data/raster-and-images/what-is-raster-data.htm) (geotiff), divided into 1000x1000km tiles, 25m resolution, accuracy of [(~7m RMSE)](https://ec.europa.eu/eurostat/documents/7116161/7172326/Report-EU-DEM-statistical-validation-August2014.pdf).\n",
     "- The only dependencies of this script are Numpy, Pandas, Pyproj and Rasterio.\n",
     "- The process was designed to minimize memory consumption. This means that pieces, tiles or chunks of the rasters are read sequentially from storage.\n",
-    "- A distributed version of this script can be easily created with Dask for Big Data use cases."
+    "- A distributed version of this script can be easily created with Dask for Big Data use cases.\n",
+    "- Source: https://github.com/carlosg-m/goose-lab"
    ]
   },
   {
