Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -38,7 +38,7 @@
     "- Compatible with Rasterio windows.\n",
     "- No need for spatial index or brute force queries.\n",
     "- Shapely, Pygeos or handling geometries is also not required.\n",
-    "- More information: [Grid creation and intersection notebooks.](https://github.com/carlosg-m/goose)"
+    "- More information: [Grid creation and intersection notebooks.](https://github.com/carlosg-m/goose-lab)"
    ]
   },
   {
