--- a/Create 2d grid with NumPy.ipynb
+++ b/Create 2d grid with NumPy.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate bounding box coordinates of a regular grid in Numpy\n",
+    "- Source: https://github.com/carlosg-m/goose-lab"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
