Update Intersect points with a regular grid without a spatial index.ipynb

--- a/Intersect points with a regular grid without a spatial index.ipynb
+++ b/Intersect points with a regular grid without a spatial index.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intersect points with a regular grid without a spatial index\n",
+    "- Source: https://github.com/carlosg-m/goose-lab"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Intersect points with a regular grid without a spatial index\n",
+    "#### Intersect points with a regular grid using Numpy\n",
     "- Intersecing points with a regular grid on a cartesian plane can be done efficiently using only NumPy and vectorized operations, without relying on spatial indexes or brute force approaches."
    ]
   },
