--- a/Intersect points with a regular grid without a spatial index.ipynb
+++ b/Intersect points with a regular grid without a spatial index.ipynb
@@ -76,7 +76,7 @@
     "    # Output coordinates: xmin, ymin, xmax, ymax\n",
     "    return grid, grid_index\n",
     "\n",
-    "def intersect_points_grid(xy, xmin, ymin, xmax, ymax, xstep, ystep, include_xmax=False, include_ymax=True):\n",
+    "def intersect_points_grid(xy, xmin, ymin, xmax, ymax, xstep, ystep, include_xmax=False, include_ymax=False):\n",
     "    \"\"\"\n",
     "    Intersect 2d Points with a regular 2d Grid using NumPy.\n",
     "    Returns the index of the Grid rectangle that each Point belongs to.\n",
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fe766a97780>"
+       "<matplotlib.collections.PathCollection at 0x7fdd51361780>"
       ]
      },
      "execution_count": 5,
@@ -341,7 +341,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fe7669ea080>"
+       "<matplotlib.collections.PathCollection at 0x7fdd512a6b70>"
       ]
      },
      "execution_count": 12,
