Update Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb

--- a/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
+++ b/Copernicus - retrieve elevation for any point in Europe (Pandas version).ipynb
@@ -79,7 +79,7 @@
     "    # Output coordinates: xmin, ymin, xmax, ymax\n",
     "    return grid, grid_index\n",
     "\n",
-    "def intersect_points_grid(xy, xmin, ymin, xmax, ymax, xstep, ystep, include_xmax=False, include_ymax=True):\n",
+    "def intersect_points_grid(xy, xmin, ymin, xmax, ymax, xstep, ystep, include_xmax=False, include_ymax=False):\n",
     "    \"\"\"\n",
     "    Intersect 2d Points with a regular 2d Grid using NumPy.\n",
     "    Returns the index of the Grid rectangle that each Point belongs to.\n",
@@ -632,9 +632,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 3998.09 MiB, increment: 3455.45 MiB\n",
-      "CPU times: user 1min 22s, sys: 11.6 s, total: 1min 34s\n",
-      "Wall time: 1min 34s\n"
+      "peak memory: 3971.30 MiB, increment: 3429.87 MiB\n",
+      "CPU times: user 1min 19s, sys: 11.3 s, total: 1min 30s\n",
+      "Wall time: 1min 30s\n"
      ]
     }
    ],
@@ -818,9 +818,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 1490.55 MiB, increment: 22.97 MiB\n",
-      "CPU times: user 828 ms, sys: 76 ms, total: 904 ms\n",
-      "Wall time: 1.02 s\n"
+      "peak memory: 1485.55 MiB, increment: 24.62 MiB\n",
+      "CPU times: user 802 ms, sys: 72.2 ms, total: 874 ms\n",
+      "Wall time: 990 ms\n"
      ]
     }
    ],
